# Decentralized

./: Cargo.toml
Npcap/: LICENSE  npcap.inf  npcap_wfp.inf
src/: main.rs  messaging.rs  myipfs.rs  routes.rs
src/timecoin/: peer_id.rs  peer_manager.rs  utils.rs
